flux/apps/base/peertube/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: redis
      app.kubernetes.io/part-of: peertube
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: redis
        app.kubernetes.io/part-of: peertube
    spec:
      containers:
        - image: redis:6-alpine
          name: redis
          resources:
            limits:
              cpu: 2000m
              memory: 512Mi
            requests:
              cpu: 10m
              memory: 15Mi
          volumeMounts:
            - mountPath: /data
              name: redis-claim0
          ports:
            - name: default
              containerPort: 6379
              protocol: TCP
      volumes:
        - name: redis-claim0
          hostPath:
            path: /var/lib/peertube/redis
            type: Directory
