flux/apps/base/peertube/peertube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: peertube
spec:
  ports:
    - name: "1935"
      port: 1935
      targetPort: 1935
    - name: "9001"
      port: 9001
      targetPort: 9000
  selector:
    app.kubernetes.io/name: peertube
    app.kubernetes.io/part-of: peertube
