flux/apps/base/peertube/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - name: default
      port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: peertube
