flux/apps/base/peertube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peertube
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  labels:
    ingress.cluster.local/probe: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - peertube.home.wugi.info
    secretName: peertube-home-wugi-info-ingress-certs
  rules:
  - host: peertube.home.wugi.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: peertube
            port:
              number: 9001
